@@ -1,3 +1,6 @@
+17:
+- Add priority setting
+
 16:
 - Update to 2.0.0.4753
 
